Arbeiten am Modal z-index Mobile Bug

--- a/sass/blocks/customer_contracts.scss
+++ b/sass/blocks/customer_contracts.scss
@@ -954,7 +954,9 @@
   }
 }
 
-//.modal-backdrop {
-//  z-index: -1;
-//}
+.modal-backdrop {
+  z-index: 100;
+}
+
+
 
